<resources>
    <string name="app_name">MesMap</string>
    <string name="app_browser_name">通用浏览器</string>
    <string name="push">根据installationId来推送</string>
    <string name="pushToChannel">根据频道来推送</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_map">地图</string>
    <string name="menu_news">消息</string>
    <string name="menu_profile">我的</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="about_copyright">© %1$s jp191 All rights reserved.</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_author_github">联系作者</string>
    <string name="about_item_donation_link">捐赠作者</string>
    <string name="about_item_add_qq_group">QQ交流群</string>
    <string name="url_project_github">https://github.com/xuexiangjys/TemplateAppProject</string>
    <string name="url_author_github">https://gitee.com/xuexiangjys/xuexiangjys</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_tip_title">提示</string>
    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>

    <!-- 登录   -->
    <string name="title_confirm">确认</string>
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password">8~18位字母和数字组合</string>
    <string name="tip_password_old">请输入旧密码</string>
    <string name="tip_password_confirm">确认新密码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="tip_phone_number">请输入手机号</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入6位数验证码</string>
    <string name="regex_verify_code">^\\d{6}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_jump_login">跳过</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">提示</string>
    <string name="now_location_sb">当前地点</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_release_title_text">请输入消息标题</string>
    <string name="news_release_title_hint">请输入标题</string>
    <string name="news_release_address">地址：</string>
    <string name="news_release_phone">联系电话：</string>
    <string name="news_release_summery">内容：</string>
    <string name="news_release_time">时间：</string>
    <string name="news_release_input_err">输入不能为空</string>
    <string name="news_release_summery_hint">请输入...</string>
    <string name="news_release_title_label_text">标题</string>
    <string name="news_release_17857690690">17858621764</string>
    <string name="lab_submit">确定</string>
    <string name="lab_cancel">取消</string>
    <string name="news_release_contacts">联系人：</string>
    <string name="news_release_姜先生">姜先生</string>
    <string name="tip_please_input_contacts">请输入联系人</string>
    <string name="title_contacts">称呼</string>
    <string name="show_new_back_bt_text">返回</string>
    <string name="show_new_delete">删除</string>
    <string name="news_release_picture">图片:</string>
    <string name="show_new_modify">修改</string>
    <string name="show_news_summery">这里是内容</string>
    <string name="modify_username">修改用户名</string>
    <string name="modify_username_tip">用户名为1~32位字符，支持中文、英文、数字</string>
    <string name="modify_signature_tip">个性签名为0~100位字符，支持中文、英文、数字</string>
    <string name="modify_signature">修改个性签名</string>
    <string name="show_news_route">路线</string>
    <string name="news_release_effective_time">有效时间：</string>
    <string name="news_release_random_position">随机生成位置：</string>
</resources>
