<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.profile.ModifyNameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/config_margin_16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_username"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_username_tip"
            android:textColor="@color/xui_btn_gray_normal_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginEnd="@dimen/config_margin_16dp"
        android:layout_marginStart="@dimen/config_margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/modify_username_mt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/config_margin_10dp"
            android:hint="@string/tip_please_input_contacts"
            android:inputType="textPersonName"
            app:met_allowEmpty="false"
            app:met_clearButton="true"
            app:met_errorEmpty="@string/news_release_input_err"
            app:met_errorMessage="请输入1~32位字符"
            app:met_maxCharacters="32"
            app:met_minCharacters="1"
            />
    </LinearLayout>

</LinearLayout>