<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/show_news_title_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/news_release_title_hint"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/xui_text_cursor_cyan"
                    android:textSize="34sp"
                    app:met_allowEmpty="false"
                    app:met_baseColor="@android:color/white"
                    app:met_clearButton="true"
                    app:met_errorEmpty="@string/news_release_input_err"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/news_release_title_label_text"
                    app:met_maxCharacters="20"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/config_margin_2dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/config_margin_2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_release_time"
                    android:textColor="@color/black" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/show_news_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:met_iconLeft="@drawable/icon_time"
                    app:met_iconPadding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/config_margin_2dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/config_margin_2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_release_address"
                    android:textColor="@color/black" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/show_news_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    app:met_iconLeft="@drawable/icon_address"
                    app:met_iconPadding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/config_margin_2dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/config_margin_2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_release_phone"
                    android:textColor="@color/black" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/show_news_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:met_iconLeft="@drawable/icon_phone"
                    app:met_iconPadding="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/config_margin_2dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/config_margin_2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_release_contacts"
                    android:textColor="@color/black" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/show_news_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:met_iconLeft="@drawable/icon_contacts"
                    app:met_iconPadding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/config_margin_2dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/config_margin_2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_release_summery"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="@dimen/config_margin_10dp"
                    android:background="@drawable/bg_white_round_summery"
                    android:padding="@dimen/config_margin_8dp">

                    <TextView
                        android:id="@+id/show_news_summery_rb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/show_news_summery" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/config_margin_16dp"
                    android:layout_marginTop="@dimen/config_margin_2dp"
                    android:layout_marginEnd="@dimen/config_margin_16dp"
                    android:layout_marginBottom="@dimen/config_margin_2dp"
                    android:text="@string/news_release_picture"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/config_margin_16dp"
                    android:layout_marginTop="@dimen/config_margin_2dp"
                    android:layout_marginEnd="@dimen/config_margin_16dp"
                    android:layout_marginBottom="@dimen/config_margin_2dp"
                    android:background="@drawable/bg_white_round_summery"
                    android:padding="@dimen/config_margin_4dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/show_news_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="?attr/xui_config_content_spacing_horizontal"
                        android:overScrollMode="never" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/config_margin_20dp"
                android:layout_marginBottom="@dimen/config_margin_20dp"
                android:orientation="horizontal">

                <com.xuexiang.xui.widget.button.ButtonView
                    android:id="@+id/show_news_back_bv"
                    style="@style/ButtonView.Gray"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="@dimen/config_margin_8dp"
                    android:text="@string/show_new_back_bt_text" />

                <com.xuexiang.xui.widget.button.ButtonView
                    android:id="@+id/show_news_delete_bv"
                    style="@style/ButtonView.Red"
                    android:layout_marginStart="10dp"
                    android:text="@string/show_new_delete"
                    android:visibility="invisible" />

                <com.xuexiang.xui.widget.button.ButtonView
                    android:id="@+id/show_news_route_bv"
                    style="@style/ButtonView.Green"
                    android:layout_marginStart="10dp"
                    android:text="@string/show_news_route"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
