<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.profile.ModifyNameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/config_margin_16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_signature"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_signature_tip"
            android:textColor="@color/xui_btn_gray_normal_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginEnd="@dimen/config_margin_16dp"
        android:layout_marginStart="@dimen/config_margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.xuexiang.xui.widget.edittext.MultiLineEditText
            android:id="@+id/modify_signature_met"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:met_allowEmpty="true"
            app:mlet_maxCount="100"
            app:met_floatingLabel="highlight"
            app:mlet_hintText="@string/news_release_summery_hint" />
    </LinearLayout>

</LinearLayout>